Agregue cnombre a portada en el main

--- a/plantilla.zip (Unzipped Files)/main.tex
+++ b/plantilla.zip (Unzipped Files)/main.tex
@@ -21,7 +21,7 @@
             
         \vspace{1.5cm}
             
-        \textbf{Nombres y Apellidos del autor}
+        \textbf{Catalina}
             
         \vfill
             
